# cppTests

./: .gitignore  README.md
CommunicationProtocol/: main.cpp
CommunicationProtocol/DevKit/: DevKit.h
CommunicationProtocol/Documentation/: Doxyfile
CommunicationProtocol/TCP/: Pipe.h  Receivable.h  Sendable.h  Serializable.h  TCP.h  TCP_TYPE_LIST.h
LambdaTest/: main.cpp
Lockable/: ITL_PERFORMANCE_TESTS.cpp  ITL_UNIT_TESTS.cpp  main.cpp
Lockable/InterProcessLockable/: InterProcessLockable.h
MessageProtocol/: CMakeLists.txt  DevKit.h  DummyClasses.h  Messenger.h  Pipe.h  Sendable.h  TCP.h  TCP_TYPE_LIST.h  main.cpp
MessageProtocol/DevKit/: DevKit.h
MessageProtocol/Documentation/html/: Sendable_8h.html  Sendable_8h_source.html  Serializable_8h_source.html  TCP_8h_source.html  TCP__TYPE__LIST_8h_source.html  annotated.html  classReceivable-members.html  classReceivable.html  classSendable.html  classSerializable-members.html  classes.html  dir_f96615c885e29c1915ebdd7b857cf3f4.html  functions_func.html  functions_rela.html  structPartialHeader-members.html  structPartialHeader.html  structRawSendable.html  structTCPHeader-members.html  structTCPHeader.html
MessageProtocol/Documentation/html/search/: classes_2.js  classes_3.js  functions_0.js  functions_2.js
MessageProtocol/Documentation/latex/: Serializable_8h.tex  annotated.tex  classPipe.tex  classReceivable.tex  classSendable.eps  hierarchy.tex
MessageProtocol/TCP/: Deserializable.h  Pipe.h  Receivable.h  Sendable.h  Serializable.h  TCP.h  TCP_TYPE_LIST.h
Spinlock/: main.cpp
(+58 files in other folders)
